// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utils Test Suite should support generate/parse migration script 1`] = `
"-- generated by cds-mysql
-- database migration scripts
-- do not manually change this file

-- version number: 100
CREATE TABLE \`sap_common_Currencies_texts\` (\`locale\` varchar(14) NOT NULL, \`name\` varchar(255) NULL, \`descr\` varchar(1000) NULL, \`code\` varchar(3) NOT NULL, PRIMARY KEY (\`locale\`, \`code\`)) ENGINE=InnoDB CHARACTER SET 'utf8mb4' COLLATE 'utf8mb4_unicode_ci'

CREATE TABLE \`test_int_Product_texts\` (\`locale\` varchar(14) NOT NULL, \`ID\` varchar(36) NOT NULL, \`Name\` varchar(255) NULL, PRIMARY KEY (\`locale\`, \`ID\`)) ENGINE=InnoDB CHARACTER SET 'utf8mb4' COLLATE 'utf8mb4_unicode_ci'

-- version number: 102
DROP VIEW \`test_int_BankService_Peoples\`

ALTER TABLE \`test_int_People\` ADD \`Name3\` varchar(30) NULL DEFAULT 'dummy'

CREATE VIEW \`test_int_BankService_Peoples\` AS SELECT
  People_0.ID,
  People_0.createdAt,
  People_0.createdBy,
  People_0.modifiedAt,
  People_0.modifiedBy,
  People_0.Name,
  People_0.Name2,
  People_0.Name3,
  People_0.Age,
  People_0.RegisterDate,
  People_0.Detail_ID
FROM test_int_People AS People_0;
"
`;

exports[`Utils Test Suite should support generate/parse migration script: parsed object 1`] = `
[
  {
    "statements": [
      {
        "query": "CREATE TABLE \`sap_common_Currencies_texts\` (\`locale\` varchar(14) NOT NULL, \`name\` varchar(255) NULL, \`descr\` varchar(1000) NULL, \`code\` varchar(3) NOT NULL, PRIMARY KEY (\`locale\`, \`code\`)) ENGINE=InnoDB CHARACTER SET 'utf8mb4' COLLATE 'utf8mb4_unicode_ci'",
      },
      {
        "query": "CREATE TABLE \`test_int_Product_texts\` (\`locale\` varchar(14) NOT NULL, \`ID\` varchar(36) NOT NULL, \`Name\` varchar(255) NULL, PRIMARY KEY (\`locale\`, \`ID\`)) ENGINE=InnoDB CHARACTER SET 'utf8mb4' COLLATE 'utf8mb4_unicode_ci'",
      },
    ],
    "version": 100,
  },
  {
    "statements": [
      {
        "query": "DROP VIEW \`test_int_BankService_Peoples\`",
      },
      {
        "query": "ALTER TABLE \`test_int_People\` ADD \`Name3\` varchar(30) NULL DEFAULT 'dummy'",
      },
      {
        "query": "CREATE VIEW \`test_int_BankService_Peoples\` AS SELECT
  People_0.ID,
  People_0.createdAt,
  People_0.createdBy,
  People_0.modifiedAt,
  People_0.modifiedBy,
  People_0.Name,
  People_0.Name2,
  People_0.Name3,
  People_0.Age,
  People_0.RegisterDate,
  People_0.Detail_ID
FROM test_int_People AS People_0;",
      },
    ],
    "version": 102,
  },
]
`;
